hphp/hack/test/typecheck/ffp/function_final_bad.php.exp
File "function_final_bad.php", line 4, characters 7-11:
Top-level functions cannot be declared `final` (Parsing[1002])
File "function_final_bad.php", line 4, characters 22-24:
Invalid return type (Typing[4336])
File "function_final_bad.php", line 4, characters 22-24:
Expected `Awaitable<void>` because this function does not always return a value
File "function_final_bad.php", line 4, characters 29-32:
But got `void`
File "function_final_bad.php", line 4, characters 22-24:
Invalid return type (Typing[4336])
File "function_final_bad.php", line 4, characters 29-32:
Expected `void`
File "function_final_bad.php", line 4, characters 22-24:
But got `Awaitable<void>` because this function does not always return a value
File "function_final_bad.php", line 4, characters 22-24:
Was expecting an `Awaitable` return type hint (Typing[4174])
